# ergonomic-posture-recommendation

./: README.md  pyproject.toml  requirements.txt
models/demo/: knn_model.joblib
models/results/: best_posture_model.joblib
notebooks/: demo_walkthrough.ipynb  real_data_walkthrough.ipynb
reports/demo/: metrics.json  posture_predictions.csv  synthetic_posture_sample.csv
reports/results/: metrics.json  posture_predictions.csv
src/ergonomic_posture/: __init__.py  cli.py  pipeline.py
tests/: test_smoke.py
