[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ergonomic-posture-recommendation"
version = "0.1.0"
description = "Wearable-sensor posture risk classification and ergonomic recommendation pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.5",
  "numpy>=2.0",
  "pandas>=2.0",
  "scikit-learn>=1.5",
]

[project.scripts]
ergonomic-posture-demo = "ergonomic_posture.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
